@@ -91,7 +91,8 @@ apm.captureError(new Error('an error on the transaction'), { parent: trans })
 apm.captureError(new Error('an error on the span'), { parent: span })
 apm.captureError(new Error('an error with explicitly no parent'), { parent: null })
 
-apm.startTransaction()
+const t1 = apm.startTransaction()
+const s1 = apm.startSpan()
 apm.startTransaction('foo')
 apm.startTransaction('foo', 'type')
 apm.startTransaction('foo', 'type', 'subtype')
@@ -100,6 +101,10 @@ apm.startTransaction('foo', { startTime: 1 })
 apm.startTransaction('foo', 'type', { startTime: 1 })
 apm.startTransaction('foo', 'type', 'subtype', { startTime: 1 })
 apm.startTransaction('foo', 'type', 'subtype', 'action', { startTime: 1 })
+apm.startTransaction('foo', { childOf: '00-12345678901234567890123456789012-1234567890123456-01' })
+apm.startTransaction('foo', { childOf: t1 })
+apm.startTransaction('foo', { childOf: s1 })
+apm.startTransaction('foo', { tracestate: 'foo=42,bar=43' })
 apm.startTransaction('foo', { links: [{ context: '00-12345678901234567890123456789012-1234567890123456-01' }] })
 
 apm.setTransactionName('foo')
